--- a/scoring/templates/tech.jade
+++ b/scoring/templates/tech.jade
@@ -8,3 +8,6 @@ block content
                 li MySQL database
                 li Web server
         li Jade (Template engine)
+        li Bootstrap (CSS framework)
+            ul
+                li Sass preprocessor
