Add JSON endpoints to retrieve some data.

--- a/scoring/templates/index.jade
+++ b/scoring/templates/index.jade
@@ -1,4 +1,9 @@
 extends base
 
 block content
-    p Who says you can't go home?
+    p JSON Endpoints
+    ul
+        li: a(href='/json') /json
+        li: a(href='/json/competitions') /json/competitions
+        li: a(href='/json/events') /json/events
+        li: a(href='/json/participants') /json/participants
