--- a/scoring/templates/tech.jade
+++ b/scoring/templates/tech.jade
@@ -5,8 +5,9 @@ block content
         li Django (Python web framework)
             ul
                 li Python
-                li MySQL database
+                li SQLite database
                 li Web server
+                li JSON serialization
         li Jade (Template engine)
         li Bootstrap (CSS framework)
             ul
