--- a/scoring/templates/nav.jade
+++ b/scoring/templates/nav.jade
@@ -1,5 +1,11 @@
 nav: p
     ul.nav.nav-pills.nav-justified
-        li: a(href='/') LASSOS Home
-        li: a(href='/admin') Admin
-        li: a(href='/tech') Tech
+        li: a(href='/')
+            span.glyphicon.glyphicon-home &nbsp;
+            | LASSOS Home
+        li: a(href='/admin')
+            span.glyphicon.glyphicon-cog &nbsp;
+            | Admin
+        li: a(href='/tech')
+            span.glyphicon.glyphicon-wrench &nbsp;
+            | Tech
