--- a/scoring/templates/index.jade
+++ b/scoring/templates/index.jade
@@ -14,5 +14,8 @@ block content
         .col-md-4
             p Token Canvas
             canvas(width='100', height='100')#canvas.token-canvas
+            
+        .col-md-4
+            p: a(href='http://github.com/JacobCWard/lassos') View on GitHub
 
     script(src="{% static 'javascripts/index.js' %}")
