--- a/scoring/templates/index.jade
+++ b/scoring/templates/index.jade
@@ -17,5 +17,10 @@ block content
             
         .col-md-4
             p: a(href='http://github.com/JacobCWard/lassos') View on GitHub
+    .row
+        .col-md-4
+            img(src="{% static 'images/lassos-logo.svg' %}")
+                            
+                           
 
     script(src="{% static 'javascripts/index.js' %}")
