--- a/scoring/templates/tech.jade
+++ b/scoring/templates/tech.jade
@@ -1,14 +1,18 @@
 extends base
 
 block content
-    ul
-        li Django (Python web framework)
-            ul
-                li Python
-                li SQLite database
-                li Web server
-                li JSON serialization
-        li Jade (Template engine)
-        li Bootstrap (CSS framework)
-            ul
-                li Sass preprocessor
+	ul
+		li Django (Python web framework)
+			ul
+				li Python
+				li PostreSQL database
+				li Web server
+				li JSON serialization
+		li Jade (Template engine)
+		li Bootstrap (CSS framework)
+			ul
+				li Sass preprocessor
+				li Compressed output
+		li Canvas logo
+		li SVG logo
+
