--- a/scoring/templates/index.jade
+++ b/scoring/templates/index.jade
@@ -2,25 +2,27 @@ extends base
 {% load static from staticfiles %}
 
 block content
-    .row
-        .col-md-4
-            p JSON Endpoints
-            ul
-                li: a(href='/json') /json
-                li: a(href='/json/competitions') /json/competitions
-                li: a(href='/json/events') /json/events
-                li: a(href='/json/participants') /json/participants
+	.row
+		.col-md-4
+			p JSON Endpoints
+			ul
+				li: a(href='/json') /json
+				li: a(href='/json/competitions') /json/competitions
+				li: a(href='/json/events') /json/events
+				li: a(href='/json/participants') /json/participants
 
-        .col-md-4
-            p Token Canvas
-            canvas(width='100', height='100')#canvas.token-canvas
-            
-        .col-md-4
-            p: a(href='http://github.com/JacobCWard/lassos') View on GitHub
-    .row
-        .col-md-4
-            img(src="{% static 'images/lassos-logo.svg' %}")
-                            
-                           
+		.col-md-4
+			p Token Canvas
+			canvas(width='100', height='100')#canvas.token-canvas
 
-    script(src="{% static 'javascripts/index.js' %}")
+		.col-md-4
+			p: a(href='http://github.com/JacobCWard/lassos') View on GitHub
+			p#ajax.token-ajax AJAX result here!
+	.row
+		.col-md-4
+			img(src="{% static 'images/lassos-logo.svg' %}")
+
+
+
+block scripts
+	script(src="{% static 'javascripts/index.js' %}")
