--- a/scoring/templates/index.jade
+++ b/scoring/templates/index.jade
@@ -20,7 +20,11 @@ block content
 			p#ajax.token-ajax AJAX result here!
 	.row
 		.col-md-4
-			img(src="{% static 'images/lassos-logo.svg' %}")
+			p SVG
+			img.img-responsive(src="{% static 'images/lassos-logo.svg' %}")
+		.col-md-4
+			p HTML Video
+			video.img-responsive(src="http://jacobcward.com/Rick Astley - Never Gonna Give You Up.mp4" controls)
 
 
 
